--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">VideoPlayerApp</string>
-    <string name="media_url">https://www.youtube.com/watch?v=vvhC64hQZMk</string>
+    <string name="media_url">https://youtu.be/FOskl3yoelM</string>
 </resources>
